# ctf-scoreboard

./: .gitignore  MAINFEST.in  manage.py  requirements.txt  setup.cfg
CTFScoreboard/: asgi.py  settings.py  urls.py  wsgi.py
scoreboard/: admin.py  apps.py  models.py  urls.py  views.py
scoreboard/migrations/: 0001_initial.py  0002_alter_event_duration_in_seconds_alter_event_end_time_and_more.py  0003_remove_event_end_time_alter_event_start_time_and_more.py  0004_alter_event_start_time_alter_graph_time.py  0005_alter_event_start_time_alter_graph_time.py  0006_alter_event_start_time_alter_graph_time_challenge.py  0007_alter_event_start_time_alter_graph_time.py  0008_alter_challenge_description_alter_event_start_time_and_more.py  0009_alter_challenge_description_alter_event_start_time_and_more.py  0010_flag_challenge_flag_number_alter_event_start_time_and_more.py
scoreboard/templates/: scoreboard.html
scoreboard/templates/scoreboard/: base.html  challenges.html  error.html  first_bloods.html  login.html  previous_event.html  scoreboard.html  success.html
templates/: base.html  error.html  previous_event.html  success.html
