[metadata]
name = django-ctf-scoreboard
version = 0.2
description = A Django app to host capture the flag events.
long_description = file: README.md
url = https://djangopackages.org/packages/p/ctf-scoreboard/
author = Joe McNally
author_email = joe_mcnally@skyzer.dev
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: